@@ -46,7 +46,7 @@ const FieldProperties UNIHAN_FIELD_PROPERTIES[]={
     {"kHanYu", 0},
     {"kHanyuPinlu", UNIHAN_FIELDFLAG_LOWERCASE},
     {"kHDZRadBreak", 0},
-    {"kHKGlyph", UNIHAN_FIELDFLAG_INTEGER | UNIHAN_FIELDFLAG_0_PADDED_4 | UNIHAN_FIELDFLAG_SINGLETON},
+    {"kHKGlyph", UNIHAN_FIELDFLAG_INTEGER | UNIHAN_FIELDFLAG_0_PADDED_4},
     {"kHKSCS", UNIHAN_FIELDFLAG_INTEGER | UNIHAN_FIELDFLAG_HEXADECIMAL_16 | UNIHAN_FIELDFLAG_SINGLETON},
     {"kIBMJapan", UNIHAN_FIELDFLAG_INTEGER | UNIHAN_FIELDFLAG_HEXADECIMAL_16 | UNIHAN_FIELDFLAG_SINGLETON},
     {"kIICore", UNIHAN_FIELDFLAG_SINGLETON},
@@ -106,7 +106,7 @@ const FieldProperties UNIHAN_FIELD_PROPERTIES[]={
 
     {"dict_volume", UNIHAN_FIELDFLAG_INTEGER | UNIHAN_FIELDFLAG_NO_INDEX},
     {"dict_page", UNIHAN_FIELDFLAG_INTEGER | UNIHAN_FIELDFLAG_NO_INDEX},
-    {"dict_position", UNIHAN_FIELDFLAG_INTEGER | UNIHAN_FIELDFLAG_NO_INDEX | UNIHAN_FIELDFLAG_NO_PRIMARYKEY},
+    {"dict_position", UNIHAN_FIELDFLAG_INTEGER | UNIHAN_FIELDFLAG_NO_INDEX},
     {"dict_virtual", UNIHAN_FIELDFLAG_INTEGER | UNIHAN_FIELDFLAG_NO_INDEX  | UNIHAN_FIELDFLAG_NO_PRIMARYKEY},
     {"dict_variant_serial", UNIHAN_FIELDFLAG_INTEGER | UNIHAN_FIELDFLAG_0_PADDED_2  | UNIHAN_FIELDFLAG_NO_INDEX  | UNIHAN_FIELDFLAG_NO_PRIMARYKEY},
     {"dict_unencoded", UNIHAN_FIELDFLAG_INTEGER  | UNIHAN_FIELDFLAG_NO_PRIMARYKEY},
